# edgestelle

./: .env  .env.example  .gitignore  README.md  pyproject.toml  run_agent.py  run_master.py
agent/: __init__.py  agent.py  config.py  executor.py
ai_agent/: __init__.py  agent.py  requirements.txt
backend/: requirements.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  mqtt_listener.py  schemas.py  security.py
backend/app/integrations/: feishu.py
backend/app/routers/: api_keys.py  auth.py  reports.py  system_config.py  templates.py
deploy/: Dockerfile  docker-compose.yml  gen_certs.sh  install_agent.sh
deploy/mosquitto/: mosquitto.conf  passwd
device_sdk/cpp/: CMakeLists.txt  edgestelle_device.hpp  main.cpp
device_sdk/python/: __init__.py  device_config.py  requirements.txt  sdk.py  test_runner.py
frontend/: index.html
master/: __init__.py  api.py  app.py  database.py  mqtt_service.py  ws_manager.py
shared/: __init__.py  config.py  crypto.py  mqtt_wrapper.py  protocol.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx
web/src/lib/: api.ts
web/src/pages/: ApiKeysPage.tsx  AuthCallback.tsx  Dashboard.tsx  LoginPage.tsx  ReportDetail.tsx  SystemSettingsPage.tsx  TemplatesPage.tsx
web/src/stores/: authStore.ts
